Forced into html standards mode. fixed layout issues that resulted from the change.

--- a/src/main/webapp/Aggredata.css
+++ b/src/main/webapp/Aggredata.css
@@ -26,7 +26,7 @@ body {
     color: #7b7a7a;
     text-align: left;
     font-size: 10pt;
-    vertical-align: middle;
+    vertical-align: top;
     cursor: pointer;
     cursor: hand;
 
@@ -37,7 +37,7 @@ body {
     color: #e70035;
     text-align: left;
     font-size: 10pt;
-    vertical-align: middle;
+    vertical-align: top;
     cursor: pointer;
     cursor: hand;
 }
